--- a/example/index.html
+++ b/example/index.html
@@ -22,8 +22,7 @@
     <script src="https://unpkg.com/cornerstone-web-image-loader@2.1.1/dist/cornerstoneWebImageLoader.min.js"></script>
     <script src="https://unpkg.com/cornerstone-tools@3.0.0-b.1512/dist/cornerstoneTools.js"></script>
     <!-- Our Plugin -->
-    <script src="/example-cornerstonejs-marketplace-listing.js"></script>
-    <!-- <script>window.jQuery || document.write('<script src="">\x3C/script>')</script> -->
+    <script src="/image-statistics.js"></script>
   </head>
   <body>
     <section>
@@ -81,8 +80,7 @@
       /***
        * Our Tool
        */
-      const ImageStatisticsTool =
-        exampleCornerstonejsMarketplaceListing.default;
+      const ImageStatisticsTool = ImageStatistics.default;
       cornerstoneTools.addTool(ImageStatisticsTool);
       cornerstoneTools.setToolEnabled("ImageStatistics");
     </script>
