--- a/example/index.html
+++ b/example/index.html
@@ -22,7 +22,7 @@
     <script src="https://unpkg.com/cornerstone-web-image-loader@2.1.1/dist/cornerstoneWebImageLoader.min.js"></script>
     <script src="https://unpkg.com/cornerstone-tools@3.0.0-b.1512/dist/cornerstoneTools.js"></script>
     <!-- Our Plugin -->
-    <script src="image-statistics.js"></script>
+    <script src="image-drawer.js"></script>
   </head>
   <body>
     <section>
@@ -80,9 +80,9 @@
       /***
        * Our Tool
        */
-      const ImageStatisticsTool = ImageStatistics.default;
-      cornerstoneTools.addTool(ImageStatisticsTool);
-      cornerstoneTools.setToolEnabled("ImageStatistics");
+      const ImageDrawerTool = ImageDrawer.default;
+      cornerstoneTools.addTool(ImageDrawerTool);
+      cornerstoneTools.setToolEnabled("ImageDrawer");
     </script>
   </body>
 </html>
