--- a/example/index.html
+++ b/example/index.html
@@ -80,8 +80,8 @@
       /***
        * Our Tool
        */
-      const ImageDrawerTool = ImageDrawer.default;
-      cornerstoneTools.addTool(ImageDrawerTool);
+      const IDTOOL = ImageDrawerTool.default;
+      cornerstoneTools.addTool(IDTOOL);
       cornerstoneTools.setToolEnabled("ImageDrawer");
     </script>
   </body>
