--- a/example/index.html
+++ b/example/index.html
@@ -17,10 +17,10 @@
 
     <!-- peerDependencies -->
     <script src="https://unpkg.com/hammerjs@2.0.8/hammer.js"></script>
-    <script src="https://unpkg.com/cornerstone-math@0.1.7/dist/cornerstoneMath.min.js"></script>
-    <script src="https://unpkg.com/cornerstone-core@2.2.8/dist/cornerstone.js"></script>
+    <script src="https://unpkg.com/cornerstone-math@0.1.8/dist/cornerstoneMath.min.js"></script>
+    <script src="https://unpkg.com/cornerstone-core@2.3.0/dist/cornerstone.js"></script>
     <script src="https://unpkg.com/cornerstone-web-image-loader@2.1.1/dist/cornerstoneWebImageLoader.min.js"></script>
-    <script src="https://unpkg.com/cornerstone-tools@3.0.0-b.1512/dist/cornerstoneTools.js"></script>
+    <script src="https://unpkg.com/cornerstone-tools@4.12.2/dist/cornerstoneTools.js"></script>
     <!-- Our Plugin -->
     <script src="image-drawer.js"></script>
   </head>
@@ -75,14 +75,13 @@
 
       cornerstoneTools.setToolActive("Pan", { mouseButtonMask: 4 });
       cornerstoneTools.setToolActive("Zoom", { mouseButtonMask: 2 });
-      cornerstoneTools.setToolActive("Wwwc", { mouseButtonMask: 1 });
 
       /***
        * Our Tool
        */
       const IDTOOL = ImageDrawerTool.default;
       cornerstoneTools.addTool(IDTOOL);
-      cornerstoneTools.setToolEnabled("ImageDrawer");
+      cornerstoneTools.setToolActive("ImageDrawer", { mouseButtonMask: 1 });
     </script>
   </body>
 </html>
